--- a/mar-10/homework/index.html
+++ b/mar-10/homework/index.html
@@ -40,7 +40,7 @@
                         <option value="lemon">Lemon</option>
                         <option value="apricote">Apricote</option>
                     </select><br>
-                    <input type="checkbox" name="brochure" value="Yes"><br>
+                    <input type="checkbox" name="checking" value="Yes"><br>
                     <input type="submit" name="submit" value="Submit">
                 </fieldset>    
             </form>   
