--- a/mar-10/homework/dom.html
+++ b/mar-10/homework/dom.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
 
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="./dom.css" />
+        <title>Document</title>
+    </head>
 
-    <input type="text" name="gitName" id="gitUsr" placeholder="Insert Git Username">
-    <button type="submit" id="btn" onclick="myFunc()">Check</button>
+    <body>
+        <input type="text" name="gitName" id="gitUsr" placeholder="Insert Git Username">
+        <button type="submit" id="btn" onclick="myFunc()">Check</button>
 
-    <ul id="list"></ul>
-    <script src="dom.js"></script>
-</body>
+        <ul id="list"></ul>
+        <script src="dom.js"></script>
+    </body>
 
 </html>
