--- a/mar-10/homework/index.html
+++ b/mar-10/homework/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,43 +9,58 @@
     <script src="./script.js"></script>
     <title>Form</title>
 </head>
+
 <body>
     <div class="main">
-        <header>
+        <header class="header">
             <p>The World of fruit</p>
         </header>
-        <div id="content">
-            <p>Fruit Survey</p>
+        <div class="content">
+            <p class="survey">Fruit Survey</p>
             <form>
                 <fieldset>
                     <label>Name
-                        <input type="text" />
-                    </label><br>
+                        <input class="inpt" type="text" />
+                    </label>
+                    <br>
+                    <br>
                     <label>Address
-                        <input type="text" />
-                    </label><br>
+                        <input class="inpt" type="text" />
+                    </label>
+                    <br>
+                    <br>
                     <label>Email
-                        <input type="email" />
-                    </label><br>
-                    <label>How many pieces of fruit<br> do you eat per day?<br>
-                        <input type="radio" name="howMany" value="zero"> 0<br>
-                        <input type="radio" name="howMany" value="one"> 1<br>
-                        <input type="radio" name="howMany" value="two"> 2<br>
+                        <input class="inpt" type="email" />
+                    </label>
+                    <label>How many pieces of fruit
+                        <br> do you eat per day?</label>
+                        <input type="radio" name="howMany" value="zero"> 0
+                        <br>
+                        <input type="radio" name="howMany" value="one"> 1
+                        <br>
+                        <input type="radio" name="howMany" value="two"> 2
+                        <br>
                         <input type="radio" name="howMany" value="more"> More than 2
-                    </label><br>
-                    <select size="4" multiple>
-                        <option value="apple">Apple</option>
-                        <option value="banana">Banana</option>
-                        <option value="plum">Plum</option>
-                        <option value="pomegranate">Pomegranate</option>
-                        <option value="lemon">Lemon</option>
-                        <option value="apricote">Apricote</option>
-                    </select><br>
-                    <input type="checkbox" name="checking" value="Yes"><br>
+                    <label>My favorite Fruit</label>
+                        <select size="4" multiple>
+                            <option value="apple">Apple</option>
+                            <option value="banana">Banana</option>
+                            <option value="plum">Plum</option>
+                            <option value="pomegranate">Pomegranate</option>
+                            <option value="lemon">Lemon</option>
+                            <option value="apricote">Apricote</option>
+                        </select>
+                    <label>Would you like a
+                        <br>brochure?
+                        <input type="checkbox" name="checking" value="Yes">
+                    </label>
+                    <br>
+                    <br>
                     <input type="submit" name="submit" value="Submit">
-                </fieldset>    
-            </form>   
+                </fieldset>
+            </form>
         </div>
-    </div>  
+    </div>
 </body>
+
 </html>
